gcc/testsuite/rust/rustc/ui/issues/issue-45829/rename.rs
use core;
use std as core;
// { dg-error ".E0252." "" { target *-*-* } .-1 }

fn main() {
    1 + 1;
}

